--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,21 +1,34 @@
 .cart {
     background: #000;
     display: none;
-    padding: 32px;
+    padding: 12px;
     position: fixed;
     right: 0px;
     top: 0px;
-    width: 200px;
+    width: 170px;
+    overflow-y: scroll;
+}
+
+.cart::-webkit-scrollbar{
+    display: none;
 }
 
 .cart img {
     aspect-ratio: 16/9;
-    width: 100%;
+    width: 50%;
 }
 
 .cart li {
     border-bottom: 1px solid #444;
-    padding-bottom: 16px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.cart li .info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .cart footer {
