--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,14 +1,11 @@
 .products {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .products ul {
     display: grid;
     grid-template-columns: repeat(auto-fit,
-            minmax(100px,
+            minmax(150px,
                 1fr));
     gap: 1rem;
 }
@@ -34,9 +31,10 @@
 }
 
 .products .title {
-    font-size:  70%;
+    font-size:  80%;
     display: flex;
     flex-direction: column;
+    height: 30%;
 }
 
 .products img {
